# k8s-basic-auth-translator

./: .gitmodules  .releaserc.json  Cargo.toml  Dockerfile  README.md  build.rs  cert.crt  csr.yaml  docker-compose.yml  go.mod  go.sum  main.go  renovate.json  test.csr  test.key
.github/workflows/: publish-docker.yml  testing.yml
certificates/: certificates.go
client/: client.go
example/api/: go.mod  main.go
example/app/: go.mod  go.sum  main.go
example/app/templates/: index.html
hack/: envoy-config.api.yaml  envoy-config.app.yaml  envoy-config.dev.yaml  test-repository.csv  test-secret.yml
old/: go.sum  main.go
old/example/api/: Dockerfile
old/example/app/: main.go
old/user_repository/: csv_repository.go  kubernetes_secret_repository.go
pki/: certificates.go  config.go
src/: kubernetes.rs  main.rs
src/auth/: grpc.rs  mod.rs  responses.rs  server.rs
src/repository/: kubernetes_secret.rs  local_csv.rs  mod.rs
translator/: egress.go  headers.go  ingress.go
user_repository/: csv_repository.go  user_repository.go
wirepact_jwt/: jwt.go
wirepact_translator/: Cargo.toml  build.rs
wirepact_translator/src/: lib.rs
wirepact_translator/src/grpc/: envoy.rs  google.rs  mod.rs  xds.rs
wirepact_translator/src/pki/: key_material.rs  mod.rs
wirepact_translator/src/translator/: egress.rs  ingress.rs  mod.rs  responses.rs  translator.rs
