[package]
name = "k8s-basic-auth-translator"
version = "0.0.0-development"
edition = "2021"

[dependencies]
clap = { version = "3.0.14", features = ["derive", "env"] }
env_logger = "0.9.0"
log = "0.4.14"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
wirepact-translator = { path = "./wirepact_translator" }
k8s-openapi = { version = "0.14.0", features = ["v1_22"] }
kube = { version = "0.69.0" }
