[package]
name = "k8s-basic-auth-translator"
version = "0.0.0-development"
edition = "2021"

[dependencies]
base64 = "0.21.2"
clap = { version = "3.2.25", features = ["derive", "env"] }
csv = "1.2.2"
env_logger = "0.10.0"
k8s-openapi = { version = "0.14.0", features = ["v1_22"] }
kube = { version = "0.72.0" }
log = "0.4.19"
serde = { version = "1.0.164", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
wirepact-translator = { git = "https://github.com/WirePact/rust-translator.git", tag = "v1.0.1" }
