[package]
name = "wirepact-translator"
version = "0.0.0-development"
edition = "2021"

[dependencies]
log = "0.4.14"
prost = "0.9"
prost-types = "0.9"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "signal"] }
tonic = { version = "0.6", features = ["tls", "tls-roots", "tls-roots-common"] }
tonic-types = "0.4"

[build-dependencies]
tonic-build = "0.6"
